I created form inside the Index.html
becouse i wanned to create form for login view in E- education platform

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,18 @@
-<div>hello</div>
+<DOCTYPE html>
+<html>
+<head>
+<title>Clz</title>
+<link type="stylesheet" rel="index.css">
+<script></script>
+</head>
+<body>
+<div class="login">
+<p class="login_p">Log in Helre</p>
+<form>
+<input class="eop" type="Text" placeholder="Email or Phone number">
+<input class="password_login" type="password" placeholder="Password">
+
+</form>
+</div>
+</body>
+</html>
