--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,11 @@
 <input class="password_login" type="password" placeholder="Password">
 <br><br>
 <input type="submit" class="btnlogin" id="btn_login" value="Log in"><br><br>
-<input type="button" class="btnca" id="btn_ca" value="Create Account" onclick="open()">
+<!input type="button" class="btnca" id="btn_ca" value="Create Account" onclick="open()"-->
+<a href="#bg_modal" id="btn_ca" class="btnca">Create Account</a>
 </form>
 </div>
-	<div class="bg-modal">
+	<div class="bg-modal" id="bg_modal">
 	<div class="modal-content">
 		<div class="close">+</div>
 		<form action="">
