--- a/Index_si.html
+++ b/Index_si.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Clz</title>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="index_si.css">
 <script src="index.js"></script>
 </head>
 <body>
@@ -13,41 +13,41 @@
 		</div>
 <div class="right">
 
-	<h1 class="login_heading">Log in here</h1>
+	<h1 class="login_heading">මෙතනින් ඇතුල්වෙන්න...</h1>
 <div class="login_div">
 <div class="eop">
 	<input type="text" name="eop_t" class="eop_t" id="eop_t" placeholder="" required>
-	<label for="eop_t" class="eop_label">Phone, Email, or username</label>
+	<label for="eop_t" class="eop_label">දුරකථනය,ඊමේලය හෝ පරිශීලක නම </label>
   </div>
 <div class="lgp">
 	<input type="password" name="lgp_t" class="lgp_t" id="lgp_t" placeholder="" required>
-	<label for="lgp_t" class="lgp_label">Password</label>
+	<label for="lgp_t" class="lgp_label">මුරපදය</label>
 	<span class="focus-border"></span>
   </div>
 	<div class="btn_login">
-	<a href="" class="btnlogin">Log in</a>
+	<a href="" class="btnlogin">ඇතුල්වෙන්න</a>
 	</div>
 	</div>
 
 
 <div class="sign_in">
-	<a href="#bg_modal" id="btn_ca" class="btnca">Create A New Account</a></div>	
+	<a href="#bg_modal" id="btn_ca" class="btnca">නව ගිණුමක් සකසන්න</a></div>	
 </div>
 	<div class="bg-modal" id="bg_modal">
 	<div class="modal-content">
 		<a href="#" class="close_btn"><div class="close">+</div></a>
 		<form action="">
-			<h3 class="ca" id="h3_ca">Create an Account</h3>
-		<input type="text" class="ca" placeholder="First Name" id="fn_ca">
-		<input type="text" class="ca" placeholder="Last Name" id="ln_ca">
-		<input type="text" class="ca" placeholder="E-mail or phone number" id="em_ca">
-		<input type="text" class="ca" placeholder="Phone number" id="pn_ca">
-		<input type="password" class="ca_p" placeholder="Password" id="p_ca">
-		<input type="password" class="ca" placeholder="Confirm password" id="cnp_ca">
-			<input type="checkbox" class="ca_cb" id="sp_ca"><label>Show password</label>
+			<h3 class="ca" id="h3_ca">ගිණුමක් සකසන්න</h3>
+		<input type="text" class="ca" placeholder="මුල් නම" id="fn_ca">
+		<input type="text" class="ca" placeholder="දෙවෙනි නම" id="ln_ca">
+		<input type="text" class="ca" placeholder="ඊමේලය" id="em_ca">
+		<input type="text" class="ca" placeholder="දුරකථන අංකය" id="pn_ca">
+		<input type="password" class="ca_p" placeholder="මුරපදය" id="p_ca">
+		<input type="password" class="ca" placeholder="මුරපදය නැවතන්" id="cnp_ca">
+			<input type="checkbox" class="ca_cb" id="sp_ca"><label>මුරපදය පෙන්වන්න</label>
 		<br><br>
-			<label>Date of Birth</label><br><br>
-		<label>Year </label><select>
+			<label>උපන්දිනය</label><br><br>
+		<label>අවුරුද්ද </label><select>
 			<option></option>
 			<option>2015</option>
 			<option>2014</option>
@@ -65,7 +65,7 @@
 			<option>2002</option>
 			<option>2001</option>
 			</select>
-			<label>Month </label><select>
+			<label>මාසය </label><select>
 			<option></option>
 			<option>01</option>
 			<option>02</option>
@@ -80,7 +80,7 @@
 			<option>11</option>
 			<option>12</option>
 			</select>
-	    <label>Date </label>
+	    <label>දිනය </label>
 		<select>
 			<option></option>
 			<option>01</option>
@@ -116,16 +116,16 @@
 			<option>31</option>
 			</select>
 		<br><br>
-			<label>Gender </label><select class="ca_g" id="Gender_ca">
+			<label>ස්ත්‍රී-පුරුෂ භාවය </label><select class="ca_g" id="Gender_ca">
 			<option></option>
-			<option >Male</option>
-			<option>Female</option>
+			<option >පුරුෂ</option>
+			<option>ස්ත්‍රී</option>
 			</select><br><br>
-		<label>Select your account type here...</label><br>
+		<label>ඔබගේ ගිණුම් වර්ගය තෝරන්න...</label><br>
 	
-			<label>Teacher</label><input type="radio" class="ca_r" id="ca_r1"><br>
-			<label>Student</label><input type="radio" class="ca_r" id="ca_r2"><br><br>
-			<a href="" class="ca_cabtn" id="ca_cabtn">Create Account</a>
+			<label>ගුරු</label><input type="radio" class="ca_r" id="ca_r1"><br>
+			<label>ශිෂ්‍ය</label><input type="radio" class="ca_r" id="ca_r2"><br><br>
+			<a href="" class="ca_cabtn" id="ca_cabtn">ගිණුම සකසන්න</a>
 		</form>
 		</div>
 	</div>
