--- a/wall.html
+++ b/wall.html
@@ -7,7 +7,7 @@
 <div id="idnavbar" class="wallnav">
 	<ul class="navul">
 		<li class="navli"><img src="wallhome.gif" id="wallhomeid" class="wallhome" href="wall.html" alt=""></li>
-	<li class="navli"><input type="search" id="search" class="search" placeholder="Search"></li>
+	<li class="navli"><input type="text" id="search" class="search" placeholder="Search..."></li>
 	<li class="navli"><img src="LMS1.gif" id="walllmsid" class="walllms" href="" alt=""></li>
 	</ul>
 </div>
